yaml/policy/dolphin-deny.yaml

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: dolphin 
spec:
  podSelector:
    matchLabels: {}
